kubernetes/apps/kube-system/cilium/netpols/allow-default-egress.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-default-egress
spec:
  endpointSelector:
    matchExpressions:
      - key: egress.policy.home.arpa/block-all
        operator: DoesNotExist
      - key: egress.policy.home.arpa/internet
        operator: DoesNotExist
      - key: egress.policy.home.arpa/kube-api
        operator: DoesNotExist
      - key: egress.policy.home.arpa/lan
        operator: DoesNotExist
      - key: egress.policy.home.arpa/infra
        operator: DoesNotExist
      - key: egress.policy.home.arpa/management
        operator: DoesNotExist
  egress:
    - toEndpoints:
        - {}
    - toEntities:
        - cluster
    - toEntities:
        - world
